tests/fixtures/invalid/none_add_str.py
# Cannot add None and Str
x: None = None + "hello"
